--- a/quadruped_envs/hyperparams/ppo.yml
+++ b/quadruped_envs/hyperparams/ppo.yml
@@ -68,3 +68,49 @@ HumanoidBulletEnv-v0:
   ent_coef: 0.0
   learning_rate: 2.5e-4
   clip_range: 0.2
+
+A1GymEnv-v0:
+  normalize: true
+  n_envs: 8
+  n_timesteps: !!float 2e6
+  policy: 'MlpPolicy'
+  n_steps: 2048
+  batch_size: 64
+  gae_lambda: 0.95
+  gamma: 0.99
+  n_epochs: 10
+  ent_coef: 0.0
+  learning_rate: 2.5e-4
+  clip_range: 0.2
+
+LocomotionGymEnv-v0:
+  normalize: true
+  n_envs: 1
+  n_timesteps: !!float 2e6
+  policy: 'MlpPolicy'
+  n_steps: 2048
+  batch_size: 1024
+  gae_lambda: 0.95
+  gamma: 0.99
+  n_epochs: 10
+  ent_coef: 0.0
+  learning_rate: 2.5e-4
+  clip_range: 0.2
+
+MountainCarContinuous-v0:
+  normalize: true
+  n_envs: 1
+  n_timesteps: !!float 20000
+  policy: 'MlpPolicy'
+  batch_size: 256
+  n_steps: 8
+  gamma: 0.9999
+  learning_rate: !!float 7.77e-05
+  ent_coef: 0.00429
+  clip_range: 0.1
+  n_epochs: 10
+  gae_lambda: 0.9
+  max_grad_norm: 5
+  vf_coef: 0.19
+  use_sde: True
+  policy_kwargs: "dict(log_std_init=-3.29, ortho_init=False)"
