--- a/quadruped_envs/hyperparams/ppo.yml
+++ b/quadruped_envs/hyperparams/ppo.yml
@@ -74,14 +74,44 @@ A1GymEnv-v0:
   n_envs: 8
   n_timesteps: !!float 2e6
   policy: 'MlpPolicy'
-  n_steps: 2048
-  batch_size: 64
+  n_steps: 4096
+  batch_size: 256
   gae_lambda: 0.95
-  gamma: 0.99
+  gamma: 0.95
   n_epochs: 10
   ent_coef: 0.0
   learning_rate: 2.5e-4
   clip_range: 0.2
+  policy_kwargs: "dict(log_std_init=-2,
+                       ortho_init=False,
+                       activation_fn=nn.ReLU,
+                       net_arch=[dict(pi=[512, 256], vf=[512, 256])]
+                       )"
+
+# Tuned
+HalfCheetahBulletEnv-v0:
+  env_wrapper: sb3_contrib.common.wrappers.TimeFeatureWrapper
+  normalize: true
+  n_envs: 16
+  n_timesteps: !!float 2e6
+  policy: 'MlpPolicy'
+  batch_size: 128
+  n_steps: 512
+  gamma: 0.99
+  gae_lambda: 0.9
+  n_epochs: 20
+  ent_coef: 0.0
+  sde_sample_freq: 4
+  max_grad_norm: 0.5
+  vf_coef: 0.5
+  learning_rate: !!float 3e-5
+  use_sde: True
+  clip_range: 0.4
+  policy_kwargs: "dict(log_std_init=-2,
+                       ortho_init=False,
+                       activation_fn=nn.ReLU,
+                       net_arch=[dict(pi=[256, 256], vf=[256, 256])]
+                       )"
 
 LocomotionGymEnv-v0:
   normalize: true
