--- a/quadruped_envs/hyperparams/ppo.yml
+++ b/quadruped_envs/hyperparams/ppo.yml
@@ -12,19 +12,24 @@ OpenDynamicQuadrupedEnv-v0:
   learning_rate: 2.5e-4
   clip_range: 0.2
 
-OpenDynamicQuadrupedDuckEnv-v0:
+OpenDynamicImitationEnv-v0:
   normalize: true
   n_envs: 8
   n_timesteps: !!float 2e6
   policy: 'MlpPolicy'
-  n_steps: 2048
-  batch_size: 64
+  n_steps: 4096
+  batch_size: 256
   gae_lambda: 0.95
-  gamma: 0.99
+  gamma: 0.95
   n_epochs: 10
   ent_coef: 0.0
   learning_rate: 2.5e-4
   clip_range: 0.2
+  policy_kwargs: "dict(log_std_init=-2,
+                       ortho_init=False,
+                       activation_fn=nn.ReLU,
+                       net_arch=[dict(pi=[512, 256], vf=[512, 256])]
+                       )"
 
 HumanoidDeepMimicWalkBulletEnv-v1:
   normalize: true
