--- a/quadruped_envs/hyperparams/ppo.yml
+++ b/quadruped_envs/hyperparams/ppo.yml
@@ -93,6 +93,25 @@ A1GymEnv-v0:
                        net_arch=[dict(pi=[512, 256], vf=[512, 256])]
                        )"
 
+A1GymEnv-v1:
+  normalize: true
+  n_envs: 8
+  n_timesteps: !!float 2e6
+  policy: 'MlpPolicy'
+  n_steps: 4096
+  batch_size: 256
+  gae_lambda: 0.95
+  gamma: 0.95
+  n_epochs: 10
+  ent_coef: 0.0
+  learning_rate: 2.5e-4
+  clip_range: 0.2
+  policy_kwargs: "dict(log_std_init=-2,
+                       ortho_init=False,
+                       activation_fn=nn.ReLU,
+                       net_arch=[dict(pi=[512, 256], vf=[512, 256])]
+                       )"
+
 # Tuned
 HalfCheetahBulletEnv-v0:
   env_wrapper: sb3_contrib.common.wrappers.TimeFeatureWrapper
