--- a/quadruped_envs/hyperparams/sac.yml
+++ b/quadruped_envs/hyperparams/sac.yml
@@ -12,6 +12,18 @@ OpenDynamicQuadrupedEnv-v0:
   gradient_steps: 1
   learning_starts: 1000
 
+OpenDynamicImitationEnv-v0:
+  normalize: "{'norm_obs': True, 'norm_reward': False}"
+  n_timesteps: !!float 2e7
+  policy: 'MlpPolicy'
+  learning_rate: lin_3e-4
+  buffer_size: 1000000
+  batch_size: 32768
+  ent_coef: 'auto'
+  train_freq: 1
+  gradient_steps: 1
+  learning_starts: 1000
+
 # To be tuned
 OpenDynamicQuadrupedDuckEnv-v0:
   # normalize: "{'norm_obs': True, 'norm_reward': False}"
